--- a/src/_theme.scss
+++ b/src/_theme.scss
@@ -15,5 +15,5 @@
   --message-padding: 10px; /* Spacing in the messages. MUST END IN px | DEFAULT: 10px */
   --message-spacing: 10px; /* Spacing around the messages. MUST END IN px | DEFAULT: 10px */
 
-  --font: 'Roboto';
+  --font: 'Inter';
 }
